# sr-unstructured-adapter

./: .env.llm.example  .gitignore  LICENSE  README.md  SPIRAL_NEAT_README.md  pyproject.toml  spiral_monolith_neat_numpy.py
.github/workflows/: ci.yml
configs/: settings.yaml
configs/profiles/: archival.yaml  balanced.yaml  realtime.yaml
configs/tenants/: anthropic-example.yaml  azure-example.yaml  default.yaml
data/: escalation_samples.jsonl
examples/: run_demo.sh  sample.txt
scripts/: assert_native_ready.py  compare_perf.py
sr-unstructured-adapter/: .gitignore  pyproject.toml
sr-unstructured-adapter 2/: README.md
sr-unstructured-adapter 2/examples/: run_demo.sh
sr-unstructured-adapter-review/: .gitignore  pyproject.toml
sr-unstructured-adapter-review/examples/: run_demo.sh
sr-unstructured-adapter-review/sr_adapter/: __init__.py
sr-unstructured-adapter-review/tests/: test_loaders.py  test_settings.py  test_smoke.py  test_telemetry.py
sr-unstructured-adapter/examples/: sample.txt
sr-unstructured-adapter/tests/: test_smoke.py
sr_adapter/: __init__.py
src/sr_adapter/: __init__.py  (+31 more)
tests/: test_cli_kernels.py  test_cli_llm.py  test_delegate_escalation.py  test_driver_manager.py  test_drivers_async.py  test_embedding.py  test_kernel_autotune.py  test_loaders.py  test_logs.py  test_pipeline.py  test_profile_auto.py  test_profiles.py  test_recipe_autogen.py  test_refiner.py  test_resilience.py  test_runtime.py  test_settings.py  test_smoke.py  test_spiral_neat.py  test_telemetry.py  test_text_normalizer.py  test_visual_layout.py  test_writer.py
(+41 files in other folders)
