[project]
name = "sr-unstructured-adapter"
version = "0.1.0"
description = "Transform unstructured files into a unified JSON payload"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "SpiralReality"}]
dependencies = []

[project.scripts]
sr-adapter = "sr_adapter.adapter:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["-q"]
